--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ version: 0.1.0
 <div class="page-header">
     <h1>
         gelbooru-crawler
-        <small>{page.version}</small>
+        <small>{{ page.version }}</small>
     </h1>
 </div>
